src/index.css
@charset "utf-8";
/* For AboutMe Section */
	.bio
{
  
  margin-top: 10px;
  margin-left: 2%;
  margin-right: 2%;
  padding-bottom: 25px;
  padding: 30px;
  background-color: rgba(255,255,255, 85%);
  border-radius: 53px;
  box-shadow: -5px 5px 10px rgba(0, 0, 0, 1);
  color: #48586a
}
/*Switching between light and dark mode */
.lightModeStyle {
  margin-top: 10px;
  margin-left: 2%;
  margin-right: "2%";
  width: 20%;
  padding: 10px;
  background-Color: rgba(255,255,255, 85%);
  border-radius: 33px;
  box-shadow: -2px 2px 10px rgba(0, 0, 0, 25);
  color: #48586a
}
.darkModeStyle {
  margin-top: 10px;
  margin-left: 2%;
  margin-right: "2%";
  width: 20%;
  padding: 10px;
  background-Color: gray;
  border-radius: 33px;
  box-shadow: -2px 2px 10px rgba(0, 0, 0, 25);
  color: white
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Roboto";
}


html,body,#root {
  height:100%;
  display: flex;
  flex-direction: column;
  background-image: url(assets/Test-Portfolio-BackGround.svg);
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

/*Portfolio Section */
.projectBox {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-top: 25px;
  align-items: center;
  margin-right: 0px;
  margin-left: 0px;
  padding: 0px;
  justify-content: center;
}

/* Header Name */
.Name {
  padding-left: 25px;
    display: flex;
    flex-direction: row;
    align-items: center;
    color: #A9BCD0;
    font-size: 20px;
  }

  /* Hello Gif for contact page */
.gif {
  border-radius: 25%;
  margin-top: 50px;
  margin-bottom: 1%;
  height: 100px;
  width: 100px;
}
/* Footer for each page */
footer {
  border-radius: 2px;
  margin-top: auto;
  width:100%;
  text-align: center;
  background-color: #373F51;
}
  /* Footer Images */
.imageLink {
  margin-top: 20px;
  margin-left: 20px;
  height: 50px;
  width: 50px;
  bottom: 0px;
}
/* Footer Hover */
.imageLink:hover {
  opacity: 25%;
}

.headerbackground {
  background-color: #373F51;
  display: flex;
  flex-wrap: wrap;
}


/* MOBILE PORTFOLIO CARDS */
.cardFrame
{
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  background : -moz-linear-gradient(50% 100% 90deg,rgba(15, 16, 63, 0.6) 0%,rgba(15, 16, 63, 1) 100%);
  background : -webkit-linear-gradient(90deg, rgba(15, 16, 63, 0.6) 0%, rgba(15, 16, 63, 1) 100%);
  background : -webkit-gradient(linear,50% 100% ,50% 0% ,color-stop(0,rgba(15, 16, 63, 0.6) ),color-stop(1,rgba(15, 16, 63, 1) ));
  background : -o-linear-gradient(90deg, rgba(15, 16, 63, 0.6) 0%, rgba(15, 16, 63, 1) 100%);
  background : -ms-linear-gradient(90deg, rgba(15, 16, 63, 0.6) 0%, rgba(15, 16, 63, 1) 100%);
  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#0F103F', endColorstr='#0F103F' ,GradientType=0)";
  background : linear-gradient(0deg, rgba(15, 16, 63, 0.6) 0%, rgba(15, 16, 63, 1) 100%);
  border-radius : 22px;
  -moz-border-radius : 22px;
  -webkit-border-radius : 22px;
  box-shadow : 1px 4px 4px rgba(35, 31, 32, 0.4);
  height:300px;
  width: 300px;
  margin-left: 30px;
  margin-right: 30px;
  margin-top: 20px;
  margin-bottom: 10px;
  filter: progid:DXImageTransform.Microsoft.dropshadow(OffX=1, OffY=4, Color='#231F20') progid:DXImageTransform.Microsoft.gradient(startColorstr='#0F103F',endColorstr='#0F103F' , GradientType=0);
}
/* Hover for portfolio card frames */
.cardFrame:hover {
  opacity: 90%;
}
.cardFrameTextBox
{
  text-decoration: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  background : #FFFFFF;
  background : rgba(255, 255, 255, 1);
  margin-bottom: 0px;
  height: 80px;
  opacity : 0.38;
  border-radius : 0px 0px 22px 22px;
  -moz-border-radius : 0px 0px 22px 22px;
  -webkit-border-radius : 0px 0px 22px 22px;
  filter: alpha(opacity=38) progid:DXImageTransform.Microsoft.Alpha(opacity=38) ;
}

#portfolioImage {
  margin-bottom: 10px;
  position: relative;
  align-self: center;
  height: 200px;
  width: auto;
  border-radius: 15px;
}
/* for <a> within Portfolio Section  */
#aTag {
  text-decoration: none;
  color: black;
}

#cardMobileTextHeader {
  font-size: larger;
  margin-top: 0px;
  font-weight: 500;

}

#cardMobileDescription {
  font-size: 12px;
  margin-top: 10px;
  padding-left: 5px;
}

